--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,38 @@
-tiktoklive==6.6.0
+altgraph==0.17.4
+anyio==4.10.0
+async-timeout==5.0.1
 betterproto==2.0.0b7
-protobuf>=3.19.4
-protobuf3-to-dict>=0.1.5
-httpx>=0.26.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+docopt==0.6.2
+ffmpy==0.6.1
+grpclib==0.4.8
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+macholib==1.16.3
+mashumaro==3.16
+multidict==6.6.3
+packaging==25.0
+pipreqs==0.4.13
+protobuf==6.31.1
+protobuf3-to-dict==0.1.5
+pyee==13.0.0
+pyinstaller==6.15.0
+pyinstaller-hooks-contrib==2025.8
+python-dateutil==2.9.0.post0
+python-socks==2.7.2
+requests==2.32.4
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+TikTokLive @ git+https://github.com/isaackogan/TikTokLive.git@7063ef848766ca39d79f97b167b90460908f6e42
+typing_extensions==4.14.1
+urllib3==2.5.0
+websockets==15.0.1
 websockets_proxy==0.1.3
-python-dateutil>=2.8
-typing-extensions>=4.7.1
+yarg==0.1.10
